--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "prepare": "husky install",
-        "postinstall": "husky install"
+        "prepare": "husky",
+        "postinstall": "husky"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
